add fontawesome abilities

--- a/layouts/partials/custom_header.html
+++ b/layouts/partials/custom_header.html
@@ -1,3 +1,5 @@
+<script src="https://use.fontawesome.com/{{ getenv "FONTAWESOME_ID" }}.js"></script>
+
 {{ range .Site.Params.custom_css }}
   <link rel="stylesheet" href="{{ $.Site.BaseURL }}{{ . }}">
 {{ end }}
