--- a/static/css/icons.css
+++ b/static/css/icons.css
@@ -1,1 +1,4 @@
-.icon-mail:before { content: "\f410"; }
+.fa-blue { color: blue }
+.fa-darkkhaki { color: darkkhaki }
+.fa-gold { color: gold }
+.fa-khaki { color: khaki }
